crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__struct_struct_with_pointers.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: struct Node { data: felt, next: Node* }
result: [
    Struct(
        StructDef {
            name: "Node",
            fields: [
                (
                    "data",
                    Named(
                        "felt",
                    ),
                ),
                (
                    "next",
                    Pointer(
                        Named(
                            "Node",
                        ),
                    ),
                ),
            ],
        },
    ),
]
