crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__type_named_type.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test(x: felt) { }
result: [
    Function(
        FunctionDef {
            name: "test",
            params: [
                Parameter {
                    name: "x",
                    type_expr: Named(
                        "felt",
                    ),
                },
            ],
            return_type: None,
            body: [],
        },
    ),
]
