crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__type_tuple_type.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test(x: (felt, felt)) { }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [
                    Parameter {
                        name: Spanned(
                            "x",
                            10..11,
                        ),
                        type_expr: Tuple(
                            [
                                Named(
                                    "felt",
                                ),
                                Named(
                                    "felt",
                                ),
                            ],
                        ),
                    },
                ],
                return_type: None,
                body: [],
            },
            0..30,
        ),
    ),
]
