crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__typed_let.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code: func test() { let x: felt = 5; }
result: [
    Function(
        Spanned(
            FunctionDef {
                name: Spanned(
                    "test",
                    5..9,
                ),
                params: [],
                return_type: None,
                body: [
                    Spanned(
                        Let {
                            name: Spanned(
                                "x",
                                18..19,
                            ),
                            statement_type: Some(
                                Named(
                                    "felt",
                                ),
                            ),
                            value: Spanned(
                                Literal(
                                    5,
                                ),
                                28..29,
                            ),
                        },
                        14..30,
                    ),
                ],
            },
            0..32,
        ),
    ),
]
