crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__unclosed_paren_diagnostic.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entries
---
code: func test() { foo(a, b; }
result: [02] Error: found ';' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '&&', '||', ',', or ')'
   ╭─[ <unknown>:1:23 ]
   │
 1 │ func test() { foo(a, b; }
   │                       ┬  
   │                       ╰── found ';' expected '{', '(', '.', '[', '*', '/', '+', '-', '==', '!=', '&&', '||', ',', or ')'
───╯
