crates/compiler/parser/src/snapshots/cairo_m_compiler_parser__parser__tests__whitespace_only.snap
---
source: crates/compiler/parser/src/parser.rs
expression: snapshot_entry
---
code:    
	   
  
result: []
